= Supernaut.FX Changes
:homepage: https://github.com/SupernautApp/SupernautFX

A high-level view of the changes in each SupernautFX release.

== v0.2.1-SNAPSHOT

Released: Under development

=== Dependency Upgrades

* jakarta.inject-api 2.0.1.RC1 (now with `module-info.java`)

== v0.2.0

Released: 2021.09.16

=== Build

* Badass JLink Plugin 2.24.2
* Byte Buddy 1.11.15 (use by Spock)
* Objenesis 3.2 (used by Spock)

=== Breaking Changes

* The Maven artifact filenames have changed:
** `supernaut-0.1.3.jar` -> `app.supernaut-0.2.0.jar`
** `supernaut-fx-0.1.3.jar` -> `app.supernaut.fx-0.2.0.jar`
** `supernaut-fx-micronaut-0.1.3.jar` -> `app.supernaut.fx.micronaut-0.2.0.jar`

* The upgrade to SLF4J 2.0.0-alpha5 may require changes to your build configuration. (You should be able to override the transitive dependency and force the usage of the SLF4J 1.7.x if you really need to.) Since building fully-modular apps is a major goal of this framework, we decided to upgrade to SLF4J 2.0.0 even though it is technically still "alpha".

=== JavaFX 17

This release of Supernaut.FX is compatible with JavaFX 17. We recommend using JavaFX 17.0.0.1 or later in your projects.

=== Dependency Upgrades

* JavaFX 17.0.0.1
* Micronaut 2.5.13
* SLF4J 2.0.0-alpha5 (True modular version with module-info.java)

=== Build

* Use JDK 17
* Gradle 7.2
* Badass JLink Plugin 2.24.1
* JavaFX Gradle Plugin 0.0.10
* Java Modularity Gradle Plugin 1.8.10
* Gradle License Plugin 0.16.1
* Groovy 3.0.9
* Spock 2.0
* Micronaut Test Spock 2.3.7

== v0.1.3

Released: 2021.05.11

=== Dependency Upgrades

* Micronaut 2.5.1
* Groovy 3.0.8

=== Build

* Use JDK 16
* Gradle 7.0
* Specify `""` as default `JvmVendorSpec` in `gradle.properties`, but allow override via command-line `-P` option.
* Publish Maven JARs to *GitLab Packages* (now that Bintray is gone)
* Badass JLink Plugin 2.23.6
* Spock 2.0-M5

== v0.1.2

Released: 2021.03.17

=== Dependency Upgrades

* JavaFX 16
* Micronaut 2.4.0