@@ -25,8 +25,6 @@ module app.supernaut.fx.micronaut {
     requires javafx.graphics;
     requires javafx.fxml;
 
-    requires static jakarta.inject;
-
     requires io.micronaut.inject;
     requires org.slf4j;
     
